--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 # SDK Versions
-minSdk = "21"
+minSdk = "26"
 targetSdk = "33"
 compileSdk = "33"
 
@@ -9,16 +9,13 @@ kotlin = "1.7.20"
 # KMP
 coroutines = "1.6.4"
 kotlinxDateTime = "0.4.0"
-kotlinxSerialization = "1.4.0"
+kotlinxSerialization = "1.4.1"
 koin = "3.2.2"
 ktor = "2.1.2"
 mokoParcelize = "0.8.0"
 multiplatformSettings = "1.0.0-RC"
 napier = "2.6.1"
 sqlDelight = "1.5.4"
-touchlabKermit = "1.1.3"
-touchlabStately = "1.2.2"
-turbine = "0.12.0"
 
 # Tools
 androidGradle = "7.2.2"
@@ -71,18 +68,19 @@ playMaps = "18.1.0"
 playLocation = "20.0.0"
 
 # Third-party
+advancedRecycler = "1.0.0"
 materialDialogs = "3.2.1"
 shimmer = "0.5.0"
 tooltip = "0.1.9"
 
 # ISD
-sdkstations = "3.0.3-SNAPSHOT"
-sdkservices = "3.0.4-SNAPSHOT"
+nrstations = "0.0.1"
+nrservices = "0.0.1"
 
 [libraries]
 # 1st party libs
-intsoftdev-stations = { module = "com.intsoftdev:sdknrstations", version.ref = "sdkstations" }
-intsoftdev-services = { module = "com.intsoftdev:sdknrservices", version.ref = "sdkservices" }
+intsoftdev-stations = { module = "com.intsoftdev:nrstations", version.ref = "nrstations" }
+intsoftdev-services = { module = "com.intsoftdev:nrservices", version.ref = "nrservices" }
 
 # KMP
 coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
@@ -113,10 +111,6 @@ sqlDelight-jvm = { module = "com.squareup.sqldelight:sqlite-driver", version.ref
 sqlDelight-coroutinesExt = { module = "com.squareup.sqldelight:coroutines-extensions", version.ref = "sqlDelight" }
 sqlDelight-native = { module = "com.squareup.sqldelight:native-driver", version.ref = "sqlDelight" }
 sqlDelight-runtime = { module = "com.squareup.sqldelight:runtime", version.ref = "sqlDelight" }
-
-touchlab-kermit = { module = "co.touchlab:kermit", version.ref = "touchlabKermit" }
-touchlab-stately = { module = "co.touchlab:stately-common", version.ref = "touchlabStately" }
-turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
 
 # Koin DI
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
@@ -172,7 +166,7 @@ android-material = { module = "com.google.android.material:material", version.re
 bugfender-sdk = { module = "com.bugfender.sdk:android", version.ref = "bugfender" }
 tooltip-library = { module = "com.github.vihtarb:tooltip", version.ref = "tooltip" }
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
-advanced-recycler = { module = "com.h6ah4i.android.widget.advrecyclerview:advrecyclerview", version = "1.0.0" }
+advanced-recycler = { module = "com.h6ah4i.android.widget.advrecyclerview:advrecyclerview", version.ref = "advancedRecycler" }
 
 # Tools
 junit = { module = "junit:junit", version.ref = "junit" }
@@ -218,14 +212,13 @@ ktor-common = [
     "ktor-client-contentNegotiation",
     "ktor-client-mock"
 ]
-sdknrstations-commonTest = [
+commonTest = [
     "kotlin-test",
     "multiplatformSettings-test",
     "koin-test",
-    "turbine",
     "coroutines-test"
 ]
-sdknrstations-androidTest = [
+androidTest = [
     "androidx-test-junit",
     "coroutines-test",
     "roboelectric",
