--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,36 +1,37 @@
 [versions]
 # SDK Versions
 minSdk = "26"
-targetSdk = "33"
-compileSdk = "33"
+targetSdk = "34"
+compileSdk = "34"
 
 # Dependencies
-kotlin = "1.8.10"
+kotlin = "1.9.10"
 # KMP
-coroutines = "1.6.4"
-kmm-viewmodel = "1.0.0-ALPHA-5"
-kmp-nativecoroutines = "1.0.0-ALPHA-5"
-kotlinxDateTime = "0.4.0"
-kotlinxSerialization = "1.5.0"
-koin = "3.3.3"
-ktor = "2.2.4"
-mokoParcelize = "0.8.0"
+coroutines = "1.7.3"
+#  viewmodel 1.0.0-ALPHA-10 onwards has issue
+#  Cannot inline bytecode built with JVM target 11 into bytecode that is being built with JVM target 1.8. Please specify proper '-jvm-target' option
+kmm-viewmodel = "1.0.0-ALPHA-9"
+kmp-nativecoroutines = "1.0.0-ALPHA-18"
+kotlinxDateTime = "0.4.1"
+kotlinxSerialization = "1.6.0"
+koin = "3.5.0"
+ktor = "2.3.4"
 multiplatformSettings = "1.0.0"
 napier = "2.6.1"
 sqlDelight = "1.5.5"
 
 # Tools
 androidGradle = "7.4.2"
-bugfender = "3.0.16"
-kspPlugin = "1.8.10-1.0.9"
+bugfender = "3.1.1"
+kspPlugin = "1.9.10-1.0.13"
 
 # https://firebase.google.com/docs/android/setup#kotlin+ktx_2
-firebaseCrashlyticsGradle = "2.9.2"
-firebaseBOM = "30.0.1"
-googleServices = "4.3.14"
-gradleVersions = "0.46.0"
+firebaseCrashlyticsGradle = "2.9.9"
+firebaseBOM = "32.2.3"
+googleServices = "4.3.15"
+gradleVersions = "0.47.0"
 junit = "4.13.2"
-ktlintGradle = "11.3.1"
+ktlintGradle = "11.5.1"
 roboelectric = "4.9"
 timber = "5.0.1"
 
@@ -39,9 +40,9 @@ timber = "5.0.1"
 activity = "1.6.1"
 appcompat = "1.6.1"
 constraintLayout = "2.1.4"
-core = "1.9.0"
-fragment = "1.5.5"
-lifecycle = "2.6.0"
+coreKtx = "1.10.1"
+fragment = "1.6.1"
+lifecycle = "2.6.2"
 navigation = "2.5.3"
 material = "1.8.0-alpha01"
 percentLayout = "1.0.0"
@@ -49,25 +50,24 @@ preference = "1.2.0"
 recyclerView = "1.3.0"
 swipeLayout = "1.1.0"
 testJunit = "1.1.3"
-work = "2.8.0"
+work = "2.8.1"
 
 # Compose
 # https://developer.android.com/jetpack/androidx/versions
 compose = "1.2.1"
-composeCompiler = "1.4.3"
-composeFoundation = "1.3.1"
-composeMaterial = "1.3.1"
-composeRuntime = "1.3.3"
-composeUi = "1.3.3"
+composeCompiler = "1.5.3"
+composeFoundation = "1.5.1"
+composeMaterial = "1.5.1"
+composeRuntime = "1.5.1"
+composeUi = "1.5.1"
 
 # Google
 accompanistSwipe = "0.28.0"
-androidDesugar = "1.1.5"
 googleBilling = "5.2.1"
 gson = "2.8.6"
 permissionsDispatcher = "4.9.1"
 playMaps = "18.1.0"
-playLocation = "20.0.0"
+playLocation = "21.0.1"
 
 # Third-party
 advancedRecycler = "1.0.0"
@@ -76,8 +76,8 @@ shimmer = "0.5.0"
 tooltip = "0.1.9"
 
 # ISD
-nrstations = "0.0.52"
-nrservices = "0.0.51"
+nrstations = "0.0.54-SNAPSHOT"
+nrservices = "0.0.53-SNAPSHOT"
 
 [libraries]
 # 1st party libs
@@ -125,7 +125,7 @@ androidx-activity-exts = { module = "androidx.activity:activity-ktx", version.re
 androidx-compose-activity = { module = "androidx.activity:activity-compose", version.ref = "activity" }
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
 androidx-constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintLayout" }
-androidx-core = { module = "androidx.core:core-ktx", version.ref = "core" }
+androidx-core = { module = "androidx.core:core-ktx", version.ref = "coreKtx" }
 androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragment" }
 androidx-lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
 androidx-lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
@@ -151,7 +151,6 @@ compose-rx = { module = "androidx.compose.runtime:runtime-rxjava2", version.ref 
 
 # Google
 google-accompanist-swipeRefresh = { module = "com.google.accompanist:accompanist-swiperefresh", version.ref = "accompanistSwipe" }
-android-desugaring = { module = "com.android.tools:desugar_jdk_libs", version.ref = "androidDesugar" }
 android-billing = { module = "com.android.billingclient:billing-ktx", version.ref = "googleBilling" }
 google-gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 android_permissions_dispatcher = { module = "com.github.permissions-dispatcher:permissionsdispatcher", version.ref = "permissionsDispatcher" }
