--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,7 +21,7 @@ sqlDelight = "1.5.5"
 turbine = "1.1.0"
 
 # Tools
-androidGradle = "7.4.2"
+androidGradle = "8.2.2"
 bugfender = "3.1.1"
 kspPlugin = "1.9.23-1.0.20"
 
@@ -51,6 +51,7 @@ recyclerView = "1.3.2"
 swipeLayout = "1.1.0"
 testJunit = "1.1.3"
 work = "2.8.1"
+secretsGradle = "2.0.1"
 
 # Compose
 # https://developer.android.com/jetpack/androidx/versions
@@ -195,6 +196,7 @@ kmpNativeCoroutines = { id = "com.rickclephas.kmp.nativecoroutines", version.ref
 sqlDelight = { id = "com.squareup.sqldelight", version.ref = "sqlDelight" }
 cocoapods = { id = "org.jetbrains.kotlin.native.cocoapods", version.ref = "kotlin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+secrets-gradle = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version.ref = "secretsGradle" }
 
 [bundles]
 app-ui = [
