--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ targetSdk = "34"
 compileSdk = "34"
 
 # Dependencies
-kotlin = "1.9.22"
+kotlin = "1.9.23"
 # KMP
 coroutines = "1.8.0"
 
@@ -21,9 +21,9 @@ sqlDelight = "1.5.5"
 turbine = "1.1.0"
 
 # Tools
-androidGradle = "7.4.2"
+androidGradle = "8.2.2"
 bugfender = "3.1.1"
-kspPlugin = "1.9.22-1.0.17"
+kspPlugin = "1.9.23-1.0.20"
 
 # https://firebase.google.com/docs/android/setup#kotlin+ktx_2
 firebaseCrashlyticsGradle = "2.9.9"
@@ -51,18 +51,20 @@ recyclerView = "1.3.2"
 swipeLayout = "1.1.0"
 testJunit = "1.1.3"
 work = "2.8.1"
+secretsGradle = "2.0.1"
 
 # Compose
 # https://developer.android.com/jetpack/androidx/versions
 compose = "1.4.0"
 composeMaterial3 = "1.2.1"
-composeCompiler = "1.5.10"
+composeCompiler = "1.5.13"
 composeFoundation = "1.6.3"
 composeMaterial = "1.6.3"
 composeRuntime = "1.6.3"
 composeUi = "1.6.3"
 composeNavigation = "2.7.7"
 composeMaps = "2.7.2"
+compose-plugin = "1.6.2"
 
 # Google
 accompanistSwipe = "0.34.0"
@@ -79,8 +81,8 @@ shimmer = "0.5.0"
 tooltip = "0.1.9"
 
 # ISD
-nrstations = "1.0.0-ALPHA-3"
-nrservices = "0.0.61-SNAPSHOT"
+nrstations = "1.0.0-ALPHA-5-SNAPSHOT"
+nrservices = "0.0.7-SNAPSHOT"
 
 [libraries]
 # 1st party libs
@@ -182,10 +184,19 @@ kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotl
 roboelectric = { module = "org.robolectric:robolectric", version.ref = "roboelectric" }
 
 [plugins]
+androidApplication = { id = "com.android.application", version.ref = "androidGradle" }
+androidLibrary = { id = "com.android.library", version.ref = "androidGradle" }
+jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "compose-plugin" }
 ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlintGradle" }
 gradleVersions = { id = "com.github.ben-manes.versions", version.ref = "gradleVersions" }
+kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+kotlinxSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "kspPlugin" }
-kmp-nativecoroutines = { id = "com.rickclephas.kmp.nativecoroutines", version.ref = "kmp-nativecoroutines" }
+kmpNativeCoroutines = { id = "com.rickclephas.kmp.nativecoroutines", version.ref = "kmp-nativecoroutines" }
+sqlDelight = { id = "com.squareup.sqldelight", version.ref = "sqlDelight" }
+cocoapods = { id = "org.jetbrains.kotlin.native.cocoapods", version.ref = "kotlin" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+secrets-gradle = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version.ref = "secretsGradle" }
 
 [bundles]
 app-ui = [
