--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,15 +5,16 @@ targetSdk = "34"
 compileSdk = "34"
 
 # Dependencies
-kotlin = "1.9.23"
-# KMP
-coroutines = "1.8.0"
+kotlin = "2.0.0"
+kspPlugin = "2.0.0-1.0.21"
 
-kmm-viewmodel = "1.0.0-ALPHA-19"
-kmp-nativecoroutines = "1.0.0-ALPHA-25"
-kotlinxDateTime = "0.5.0"
-kotlinxSerialization = "1.6.0"
-koin = "3.5.3"
+# KMP
+coroutines = "1.8.1"
+
+kmp-viewmodel = "1.0.0-BETA-3"
+kmp-nativecoroutines = "1.0.0-ALPHA-31"
+kotlinxDateTime = "0.6.0"
+koin = "3.6.0-Beta4"
 ktor = "2.3.7"
 multiplatformSettings = "1.1.1"
 napier = "2.7.1"
@@ -22,28 +23,27 @@ turbine = "1.1.0"
 
 # Tools
 androidGradle = "8.2.2"
-bugfender = "3.1.1"
-kspPlugin = "1.9.23-1.0.20"
+bugfender = "3.2.0"
 
 # https://firebase.google.com/docs/android/setup#kotlin+ktx_2
 firebaseCrashlyticsGradle = "2.9.9"
 firebaseBOM = "32.2.3"
 googleServices = "4.3.15"
-gradleVersions = "0.47.0"
+gradleVersions = "0.51.0"
 junit = "4.13.2"
-ktlintGradle = "11.5.1"
+ktlintGradle = "12.1.1"
 roboelectric = "4.11.1"
 timber = "5.0.1"
 
 # AndroidX
 # https://developer.android.com/jetpack/androidx/versions
-activity = "1.8.2"
-appcompat = "1.6.1"
+activity = "1.9.0"
+appcompat = "1.7.0"
 constraintLayout = "2.1.4"
-coreKtx = "1.12.0"
-fragment = "1.6.2"
-lifecycle = "2.7.0"
-navigation = "2.5.3"
+coreKtx = "1.13.1"
+fragment = "1.7.1"
+lifecycle = "2.8.1"
+navigation = "2.7.7"
 material = "1.11.0"
 percentLayout = "1.0.0"
 preference = "1.2.1"
@@ -55,23 +55,17 @@ secretsGradle = "2.0.1"
 
 # Compose
 # https://developer.android.com/jetpack/androidx/versions
-compose = "1.4.0"
-composeMaterial3 = "1.2.1"
-composeCompiler = "1.5.13"
-composeFoundation = "1.6.3"
-composeMaterial = "1.6.3"
-composeRuntime = "1.6.3"
-composeUi = "1.6.3"
+compose = "1.7.0-beta01"
+composeMaterial3 = "1.3.0-beta02"
 composeNavigation = "2.7.7"
-composeMaps = "2.7.2"
-compose-plugin = "1.6.2"
+composeMaps = "5.0.1"
 
 # Google
 accompanistSwipe = "0.34.0"
 googleBilling = "5.2.1"
 gson = "2.8.6"
 permissionsDispatcher = "4.9.1"
-playMaps = "18.1.0"
+playMaps = "18.2.0"
 playLocation = "21.0.1"
 
 # Third-party
@@ -81,8 +75,8 @@ shimmer = "0.5.0"
 tooltip = "0.1.9"
 
 # ISD
-nrstations = "1.0.0-ALPHA-5-SNAPSHOT"
-nrservices = "0.0.7-SNAPSHOT"
+nrstations = "1.0.0-ALPHA-6-SNAPSHOT"
+nrservices = "0.0.8-SNAPSHOT"
 
 [libraries]
 # 1st party libs
@@ -104,9 +98,8 @@ ktor-common-serialization = { module = "io.ktor:ktor-client-serialization", vers
 ktor-client-mock = { module = "io.ktor:ktor-client-mock", version.ref = "ktor" }
 
 kotlinx-dateTime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDateTime" }
-kolinx-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
 
-kmm-viewmodel = { module = "com.rickclephas.kmm:kmm-viewmodel-core", version.ref = "kmm-viewmodel" }
+kmp-viewmodel = { module = "com.rickclephas.kmp:kmp-observableviewmodel-core", version.ref = "kmp-viewmodel" }
 
 multiplatformSettings-common = { module = "com.russhwolf:multiplatform-settings", version.ref = "multiplatformSettings" }
 multiplatformSettings-test = { module = "com.russhwolf:multiplatform-settings-test", version.ref = "multiplatformSettings" }
@@ -148,7 +141,6 @@ androidx-test-junit = { module = "androidx.test.ext:junit-ktx", version.ref = "t
 androidx-work = { module = "androidx.work:work-runtime-ktx", version.ref = "work" }
 
 # Compose
-compose-compiler = { module = "androidx.compose.compiler:compiler", version.ref = "composeCompiler" }
 compose-material3 = {module = "androidx.compose.material3:material3", version.ref = "composeMaterial3" }
 compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
 compose-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
@@ -186,7 +178,7 @@ roboelectric = { module = "org.robolectric:robolectric", version.ref = "roboelec
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "androidGradle" }
 androidLibrary = { id = "com.android.library", version.ref = "androidGradle" }
-jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "compose-plugin" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlintGradle" }
 gradleVersions = { id = "com.github.ben-manes.versions", version.ref = "gradleVersions" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
@@ -200,7 +192,6 @@ secrets-gradle = { id = "com.google.android.libraries.mapsplatform.secrets-gradl
 
 [bundles]
 app-ui = [
-    "compose-compiler",
     "compose-ui",
     "compose-tooling",
     "compose-foundation",
