--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,9 +26,9 @@ androidGradle = "8.2.2"
 bugfender = "3.2.0"
 
 # https://firebase.google.com/docs/android/setup#kotlin+ktx_2
-firebaseCrashlyticsGradle = "2.9.9"
-firebaseBOM = "32.2.3"
-googleServices = "4.3.15"
+firebaseCrashlyticsGradle = "3.0.1"
+firebaseBOM = "33.1.0"
+googleServices = "4.4.2"
 gradleVersions = "0.51.0"
 junit = "4.13.2"
 ktlintGradle = "12.1.1"
@@ -50,7 +50,7 @@ preference = "1.2.1"
 recyclerView = "1.3.2"
 swipeLayout = "1.1.0"
 testJunit = "1.1.3"
-work = "2.8.1"
+work = "2.9.0"
 secretsGradle = "2.0.1"
 
 # Compose
@@ -61,18 +61,18 @@ composeNavigation = "2.7.7"
 composeMaps = "5.0.1"
 
 # Google
-accompanistSwipe = "0.34.0"
-googleBilling = "5.2.1"
-gson = "2.8.6"
+accompanistSwipe = "0.35.1-alpha"
+googleBilling = "7.0.0"
+gson = "2.11.0"
 permissionsDispatcher = "4.9.1"
 playMaps = "18.2.0"
-playLocation = "21.0.1"
+playLocation = "21.3.0"
 
 # Third-party
 advancedRecycler = "1.0.0"
-materialDialogs = "3.2.1"
+materialDialogs = "3.3.0"
 shimmer = "0.5.0"
-tooltip = "0.1.9"
+tooltip = "0.2.0"
 
 # ISD
 nrstations = "1.0.0-ALPHA-6-SNAPSHOT"
