--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,13 +9,14 @@ kotlin = "2.0.0"
 kspPlugin = "2.0.0-1.0.21"
 
 # KMP
-coroutines = "1.8.1"
+coroutines = "1.8.0"
 
 kmp-viewmodel = "1.0.0-BETA-3"
 kmp-nativecoroutines = "1.0.0-ALPHA-31"
 kotlinxDateTime = "0.6.0"
 koin = "3.6.0-Beta4"
-ktor = "2.3.7"
+konnection = "1.3.1"
+ktor = "2.3.10"
 multiplatformSettings = "1.1.1"
 napier = "2.7.1"
 sqlDelight = "1.5.5"
@@ -75,7 +76,7 @@ shimmer = "0.5.0"
 tooltip = "0.2.0"
 
 # ISD
-nrstations = "1.0.0-ALPHA-6-SNAPSHOT"
+nrstations = "1.0.0-ALPHA-5"
 nrservices = "0.0.8-SNAPSHOT"
 
 [libraries]
@@ -88,7 +89,7 @@ coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", ve
 coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
 
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
-ktor-client-ios = { module = "io.ktor:ktor-client-ios", version.ref = "ktor" }
+ktor-client-ios = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor" }
 ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
 ktor-client-okHttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
 ktor-client-serialization = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
@@ -102,8 +103,10 @@ kotlinx-dateTime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.
 kmp-viewmodel = { module = "com.rickclephas.kmp:kmp-observableviewmodel-core", version.ref = "kmp-viewmodel" }
 
 multiplatformSettings-common = { module = "com.russhwolf:multiplatform-settings", version.ref = "multiplatformSettings" }
+multiplatformSettings-serialization = { module = "com.russhwolf:multiplatform-settings-serialization", version.ref = "multiplatformSettings" }
 multiplatformSettings-test = { module = "com.russhwolf:multiplatform-settings-test", version.ref = "multiplatformSettings" }
 
+konnection = { module = "dev.tmapps:konnection", version.ref = "konnection" }
 napier-logger = { module = "io.github.aakira:napier", version.ref = "napier" }
 
 turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
