--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,10 +16,11 @@ kmp-nativecoroutines = "1.0.0-ALPHA-31"
 kotlinxDateTime = "0.6.0"
 koin = "3.6.0-Beta4"
 konnection = "1.3.1"
-ktor = "2.3.10"
+# experimental Ktor update to fix memAllocs found in Instruments Leaks on iOS
+ktor = "3.0.0-beta-1"
 multiplatformSettings = "1.1.1"
 napier = "2.7.1"
-sqlDelight = "1.5.5"
+sqlDelight = "2.0.2"
 turbine = "1.1.0"
 
 # Tools
@@ -76,8 +77,8 @@ shimmer = "0.5.0"
 tooltip = "0.2.0"
 
 # ISD
-nrstations = "1.0.0-ALPHA-5"
-nrservices = "0.0.8-SNAPSHOT"
+nrstations = "1.0.0-ALPHA-7-SNAPSHOT"
+nrservices = "0.0.9-SNAPSHOT"
 
 [libraries]
 # 1st party libs
@@ -111,11 +112,11 @@ napier-logger = { module = "io.github.aakira:napier", version.ref = "napier" }
 
 turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
 
-sqlDelight-android = { module = "com.squareup.sqldelight:android-driver", version.ref = "sqlDelight" }
-sqlDelight-jvm = { module = "com.squareup.sqldelight:sqlite-driver", version.ref = "sqlDelight" }
-sqlDelight-coroutinesExt = { module = "com.squareup.sqldelight:coroutines-extensions", version.ref = "sqlDelight" }
-sqlDelight-native = { module = "com.squareup.sqldelight:native-driver", version.ref = "sqlDelight" }
-sqlDelight-runtime = { module = "com.squareup.sqldelight:runtime", version.ref = "sqlDelight" }
+sqlDelight-android = { module = "app.cash.sqldelight:android-driver", version.ref = "sqlDelight" }
+sqlDelight-jvm = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqlDelight" }
+sqlDelight-coroutinesExt = { module = "app.cash.sqldelight:coroutines-extensions", version.ref = "sqlDelight" }
+sqlDelight-native = { module = "app.cash.sqldelight:native-driver", version.ref = "sqlDelight" }
+sqlDelight-runtime = { module = "app.cash.sqldelight:runtime", version.ref = "sqlDelight" }
 
 # Koin DI
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
@@ -189,7 +190,7 @@ kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref =
 kotlinxSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "kspPlugin" }
 kmpNativeCoroutines = { id = "com.rickclephas.kmp.nativecoroutines", version.ref = "kmp-nativecoroutines" }
-sqlDelight = { id = "com.squareup.sqldelight", version.ref = "sqlDelight" }
+sqlDelight = { id = "app.cash.sqldelight", version.ref = "sqlDelight" }
 cocoapods = { id = "org.jetbrains.kotlin.native.cocoapods", version.ref = "kotlin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 secrets-gradle = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version.ref = "secretsGradle" }
