--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,7 +16,8 @@ kmp-nativecoroutines = "1.0.0-ALPHA-31"
 kotlinxDateTime = "0.6.0"
 koin = "3.6.0-Beta4"
 konnection = "1.3.1"
-ktor = "2.3.10"
+# experimental Ktor update to fix memAllocs found in Instruments Leaks on iOS
+ktor = "3.0.0-beta-1"
 multiplatformSettings = "1.1.1"
 napier = "2.7.1"
 sqlDelight = "1.5.5"
@@ -76,8 +77,8 @@ shimmer = "0.5.0"
 tooltip = "0.2.0"
 
 # ISD
-nrstations = "1.0.0-ALPHA-5"
-nrservices = "0.0.8-SNAPSHOT"
+nrstations = "1.0.0-ALPHA-7"
+nrservices = "0.0.9"
 
 [libraries]
 # 1st party libs
@@ -186,7 +187,7 @@ compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "
 ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlintGradle" }
 gradleVersions = { id = "com.github.ben-manes.versions", version.ref = "gradleVersions" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
-kotlinxSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "kspPlugin" }
 kmpNativeCoroutines = { id = "com.rickclephas.kmp.nativecoroutines", version.ref = "kmp-nativecoroutines" }
 sqlDelight = { id = "com.squareup.sqldelight", version.ref = "sqlDelight" }
