--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -52,15 +52,15 @@ preference = "1.2.1"
 recyclerView = "1.3.2"
 swipeLayout = "1.1.0"
 testJunit = "1.1.3"
-work = "2.9.0"
+work = "2.10.0-alpha02"
 secretsGradle = "2.0.1"
 
 # Compose
 # https://developer.android.com/jetpack/androidx/versions
-compose = "1.7.0-beta01"
-composeMaterial3 = "1.3.0-beta02"
-composeNavigation = "2.7.7"
-composeMaps = "5.0.1"
+compose = "1.7.0-beta04"
+composeMaterial3 = "1.3.0-beta04"
+composeNavigation = "2.8.0-beta04"
+composeMaps = "5.0.4"
 
 # Google
 accompanistSwipe = "0.35.1-alpha"
@@ -77,8 +77,8 @@ shimmer = "0.5.0"
 tooltip = "0.2.0"
 
 # ISD
-nrstations = "1.0.0-ALPHA-8"
-nrservices = "0.1.0-SNAPSHOT"
+nrstations = "1.0.0-ALPHA-9"
+nrservices = "0.1.1-SNAPSHOT"
 
 [libraries]
 # 1st party libs
